stop warning, log by taoensso/timbre